# target-athena

./: .gitignore  README.md  config.json.sample  meltano.yml  pyproject.toml  setup.py  target-athena.sh
target_athena/: __init__.py  athena.py  formats.py  init.bak.py  s3.py  sinks.py  streams.py  tap.py  target.py  utils.py
target_athena/tests/: __init__.py  test_core.py
tests/integration/: test_target_athena.py  utils.py
tests/unit/: test_unit.py
