[tool.poetry]
name = "target-athena"
version = "0.0.1"
description = "`target-athena` is Singer tap for Athena, built with the Singer SDK."
authors = ["FirstName LastName"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
requests = "^2.25.1"
singer-sdk = "0.1.3-dev.1210880876"
boto3 = "^1.17.64"
pyathena = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
nose = "^1.3.7"
python-dotenv = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-athena = 'target_athena.tap:cli'
